--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,27 +1,38 @@
 name: Build
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+ push:
+   branches: [ main ]
+ pull_request:
+   branches: [ main ]
 
 jobs:
-  build:
-    runs-on: windows-latest
+ build:
+   runs-on: windows-latest
 
-    steps:
-    - uses: actions/checkout@v2
+   steps:
+   - uses: actions/checkout@v2
 
-    - name: Install Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        target: x86_64-pc-windows-gnu
-        override: true
+   - name: Install Rust
+     uses: actions-rs/toolchain@v1
+     with:
+       toolchain: stable
+       target: x86_64-pc-windows-gnu
+       override: true
 
-    - name: Build
-      uses: actions-rs/cargo@v1
-      with:
-        command: build
-        args: --release --target x86_64-pc-windows-gnu
+   - name: Install vcpkg
+     run: |
+       git clone https://github.com/microsoft/vcpkg.git
+       ./vcpkg/bootstrap-vcpkg.sh
+
+   - name: Install SDL2
+     run: |
+       ./vcpkg/vcpkg install sdl2:x64-windows
+       echo %PATH%
+
+   - name: Build
+     uses: actions-rs/cargo@v1
+     with:
+       command: build
+       args: --release --target x86_64-pc-windows-gnu
+
