--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build
 
 on:
  push:
-   branches: [ main ]
+   branches: [ master ]
  pull_request:
-   branches: [ main ]
+   branches: [ master ]
 
 jobs:
  build:
@@ -35,4 +35,3 @@ jobs:
      with:
        command: build
        args: --release --target x86_64-pc-windows-gnu
-
