--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,9 +15,8 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Rust
-      uses: actions/setup-rust@v1
-      with:
-        rust-version: stable
+      uses: rust-lang/setup-rust@v1
+
     - name: Build
       run: cargo build --release
 
